--- a/courses.ipynb
+++ b/courses.ipynb
@@ -172,15 +172,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "{name: course['name'], code:course['code'], enrolled:} for course in courses "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -198,11 +189,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### i. Create my own interesting question(Jing):\n",
+    "    The top 5 independent study with most students enrolled"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "inde_courses = [course for course in courses if course['independent_study'] == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[course['name'] for course in sorted(inde_courses, key=lambda course: course['enrolled'], reverse = True)[:5]]"
+   ]
   },
   {
    "cell_type": "code",
@@ -228,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
