--- a/courses.ipynb
+++ b/courses.ipynb
@@ -161,7 +161,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[course['instructor'] for course in sorted(courses, key=lambda course: course['enrolled'], reverse = True)[:20]]"
+    "courses_students = dict()\n",
+    "for c in courses:\n",
+    "    if c['code'] in courses_students.keys():\n",
+    "        courses_students[c['code']] += c['enrolled']\n",
+    "    else:\n",
+    "        courses_students[c['code']] = 0\n",
+    "courses_students = sorted(courses_students.items(), key = lambda item: item[1], reverse = True)\n",
+    "print(courses_students[:20])"
    ]
   },
   {
@@ -238,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
