--- a/courses.ipynb
+++ b/courses.ipynb
@@ -161,6 +161,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "instructor = dict()\n",
+    "for c in courses:\n",
+    "    if c['instructor'] in instructor:\n",
+    "        instructor[c['instructor']] += c['enrolled']\n",
+    "    else:\n",
+    "        instructor[c['instructor']] = c['enrolled']\n",
+    "[ins for ins in sorted(instructor.items(), key= lambda instructor: instructor[1], reverse = True)][:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### h. list the top 20 courses in terms of number of students taking that course (where you combine different sections and semesters, i.e. just use the subject and course number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "courses_students = dict()\n",
     "for c in courses:\n",
     "    if c['code'] in courses_students.keys():\n",
@@ -169,13 +191,6 @@
     "        courses_students[c['code']] = 0\n",
     "courses_students = sorted(courses_students.items(), key = lambda item: item[1], reverse = True)\n",
     "print(courses_students[:20])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### h. list the top 20 courses in terms of number of students taking that course (where you combine different sections and semesters, i.e. just use the subject and course number)"
    ]
   },
   {
@@ -200,7 +215,7 @@
    "metadata": {},
    "source": [
     "#### i. Create my own interesting question(Jing):\n",
-    "    The top 5 independent study with most students enrolled"
+    "    The top 10 instructors in terms of the number of independent study they have taught"
    ]
   },
   {
@@ -209,16 +224,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inde_courses = [course for course in courses if course['independent_study'] == True]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[course['name'] for course in sorted(inde_courses, key=lambda course: course['enrolled'], reverse = True)[:5]]"
+    "instructor_with_inde = dict()\n",
+    "for c in courses:\n",
+    "    if course['independent_study'] == True:\n",
+    "        if c['instructor'] in instructor_with_inde:\n",
+    "            instructor_with_inde[c['instructor']] += 1\n",
+    "        else:\n",
+    "            instructor_with_inde[c['instructor']] = 1\n",
+    "[ins for ins in sorted(instructor_with_inde.items(), key= lambda instructor: instructor[1], reverse = True)][:10]"
    ]
   },
   {
@@ -245,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
