--- a/courses.ipynb
+++ b/courses.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 7813 courses in the dataset\n",
+      "here is the data for course 1246\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'limit': 28,\n",
+       " 'times': [{'start': 1080, 'end': 1170, 'days': ['w', 'm']}],\n",
+       " 'enrolled': 4,\n",
+       " 'details': 'Instruction for this course will be offered remotely. Meeting times for this course are listed in the schedule of classes (in ET).',\n",
+       " 'type': 'section',\n",
+       " 'status_text': 'Open',\n",
+       " 'section': '1',\n",
+       " 'waiting': 0,\n",
+       " 'instructor': ['An', 'Huang', 'anhuang@brandeis.edu'],\n",
+       " 'coinstructors': [],\n",
+       " 'code': ['MATH', '223A'],\n",
+       " 'subject': 'MATH',\n",
+       " 'coursenum': '223A',\n",
+       " 'name': 'Lie Algebras: Representation Theory',\n",
+       " 'independent_study': False,\n",
+       " 'term': '1203',\n",
+       " 'description': \"Theorems of Engel and Lie. Semisimple Lie algebras, Cartan's criterion. Universal enveloping algebras, PBW theorem, Serre's construction. Representation theory. Other topics as time permits. Usually offered every second year.\\nAn Huang\"}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print('there are',len(courses),'courses in the dataset')\n",
     "print('here is the data for course 1246')\n",
@@ -69,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,9 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len({course['instructor'] for course in courses if course['subject']=='COSI' and (course['term']=='1211' or course['term'] == '1212')})"
    ]
@@ -124,9 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "944"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum({course['enrolled'] for course in courses if course['subject'] == 'COSI' and (course['term']=='1211' or course['term'] == '1212')})"
    ]
@@ -140,12 +197,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "statistics.median({course['enrolled'] for course in courses if course['subject'] == 'COSI' and \n",
     "                   (course['term']=='1211' or course['term'] == '1212') and (course['enrolled']>=10)})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### d. create a list of tuples (E,S) where S is a subject and E is the number of students enrolled in courses in that subject, sort it and print the top 10. This shows the top 10 subjects in terms of number of students taught.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('HS', 5318),\n",
+       " ('BIOL', 3085),\n",
+       " ('BUS', 2766),\n",
+       " ('HWL', 2734),\n",
+       " ('CHEM', 2322),\n",
+       " ('ECON', 2315),\n",
+       " ('COSI', 2223),\n",
+       " ('MATH', 1785),\n",
+       " ('PSYC', 1704),\n",
+       " ('ANTH', 1144)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tup = dict()\n",
+    "for c in courses:\n",
+    "    if c['subject'] in tup:\n",
+    "        tup[c['subject']] += c['enrolled']\n",
+    "    else:\n",
+    "        tup[c['subject']] = c['enrolled']\n",
+    "\n",
+    "list = [(k, v) for k, v in tup.items()]\n",
+    "list = sorted(list, key = lambda x: -x[1])\n",
+    "list[0: 10]\n",
+    "\n",
+    "# [ins for ins in sorted(tup.items(), key= lambda tup: tup[1], reverse = True)][:10]\n",
+    "# data = list(zip(A, B))\n",
+    "# data = sorted(data, key = lambda x: x[1])\n",
+    "# data[0:10]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### e. do the same as in (d) but print the top 10 subjects in terms of number of courses offered\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('BIOL', 613),\n",
+       " ('HIST', 498),\n",
+       " ('PSYC', 417),\n",
+       " ('NEUR', 403),\n",
+       " ('BCHM', 296),\n",
+       " ('PHYS', 288),\n",
+       " ('HS', 274),\n",
+       " ('COSI', 272),\n",
+       " ('MUS', 266),\n",
+       " ('ENG', 265)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tup1 = dict()\n",
+    "for c in courses:\n",
+    "    if c['subject'] in tup1:\n",
+    "        tup1[c['subject']] += 1\n",
+    "    else:\n",
+    "        tup1[c['subject']] = 1\n",
+    "\n",
+    "list1 = [(k, v) for k, v in tup1.items()]\n",
+    "list1 = sorted(list1, key = lambda x: -x[1])\n",
+    "list1[0: 10]\n",
+    "\n",
+    "# not sure about what it mean by number of courses: same course different term?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### f. do the same as (d) but print the top 10 subjects in terms of number of faculty teaching courses in that subject\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('HS', 87),\n",
+       " ('BIOL', 67),\n",
+       " ('ECON', 52),\n",
+       " ('BCHM', 49),\n",
+       " ('BUS', 47),\n",
+       " ('HIST', 47),\n",
+       " ('BCBP', 46),\n",
+       " ('HWL', 42),\n",
+       " ('MATH', 37),\n",
+       " ('NEJS', 37)]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tup2 = dict()\n",
+    "for c in courses:\n",
+    "    if c['subject'] in tup2:\n",
+    "        if c['instructor'] in tup2[c['subject']]:\n",
+    "            continue\n",
+    "        else:\n",
+    "            tup2[c['subject']].add(c['instructor'])\n",
+    "    else:\n",
+    "        tup2[c['subject']] = set()\n",
+    "        tup2[c['subject']].add(c['instructor'])\n",
+    "\n",
+    "list2 = [(k, len(v)) for k, v in tup2.items()]\n",
+    "list2 = sorted(list2, key = lambda x: -x[1])\n",
+    "list2[0: 10]"
    ]
   },
   {
@@ -258,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
