--- a/courses.ipynb
+++ b/courses.ipynb
@@ -299,7 +299,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### i. Create my own interesting question(Jing):\n",
     "    The top 10 instructors in terms of the number of independent study they have taught"
@@ -322,11 +324,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### i. Create my own interesting question(Shuyuan):\n",
+    "    Courses waiting list is larger than 15?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[{c['name'] for c in courses if c['waiting'] >= 15}] "
+   ]
   }
  ],
  "metadata": {
@@ -345,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
