--- a/courses.ipynb
+++ b/courses.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 7813 courses in the dataset\n",
+      "here is the data for course 1246\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'limit': 28,\n",
+       " 'times': [{'start': 1080, 'end': 1170, 'days': ['w', 'm']}],\n",
+       " 'enrolled': 4,\n",
+       " 'details': 'Instruction for this course will be offered remotely. Meeting times for this course are listed in the schedule of classes (in ET).',\n",
+       " 'type': 'section',\n",
+       " 'status_text': 'Open',\n",
+       " 'section': '1',\n",
+       " 'waiting': 0,\n",
+       " 'instructor': ['An', 'Huang', 'anhuang@brandeis.edu'],\n",
+       " 'coinstructors': [],\n",
+       " 'code': ['MATH', '223A'],\n",
+       " 'subject': 'MATH',\n",
+       " 'coursenum': '223A',\n",
+       " 'name': 'Lie Algebras: Representation Theory',\n",
+       " 'independent_study': False,\n",
+       " 'term': '1203',\n",
+       " 'description': \"Theorems of Engel and Lie. Semisimple Lie algebras, Cartan's criterion. Universal enveloping algebras, PBW theorem, Serre's construction. Representation theory. Other topics as time permits. Usually offered every second year.\\nAn Huang\"}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print('there are',len(courses),'courses in the dataset')\n",
     "print('here is the data for course 1246')\n",
@@ -69,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,9 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len({course['instructor'] for course in courses if course['subject']=='COSI' and (course['term']=='1211' or course['term'] == '1212')})"
    ]
@@ -124,9 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "944"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum({course['enrolled'] for course in courses if course['subject'] == 'COSI' and (course['term']=='1211' or course['term'] == '1212')})"
    ]
@@ -140,9 +197,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "statistics.median({course['enrolled'] for course in courses if course['subject'] == 'COSI' and \n",
     "                   (course['term']=='1211' or course['term'] == '1212') and (course['enrolled']>=10)})"
@@ -157,9 +225,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('HS', 5318),\n",
+       " ('BIOL', 3085),\n",
+       " ('BUS', 2766),\n",
+       " ('HWL', 2734),\n",
+       " ('CHEM', 2322),\n",
+       " ('ECON', 2315),\n",
+       " ('COSI', 2223),\n",
+       " ('MATH', 1785),\n",
+       " ('PSYC', 1704),\n",
+       " ('ANTH', 1144)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tup = dict()\n",
     "for c in courses:\n",
@@ -188,9 +276,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('BIOL', 613),\n",
+       " ('HIST', 498),\n",
+       " ('PSYC', 417),\n",
+       " ('NEUR', 403),\n",
+       " ('BCHM', 296),\n",
+       " ('PHYS', 288),\n",
+       " ('HS', 274),\n",
+       " ('COSI', 272),\n",
+       " ('MUS', 266),\n",
+       " ('ENG', 265)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tup1 = dict()\n",
     "for c in courses:\n",
@@ -215,9 +323,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('HS', 87),\n",
+       " ('BIOL', 67),\n",
+       " ('ECON', 52),\n",
+       " ('BCHM', 49),\n",
+       " ('BUS', 47),\n",
+       " ('HIST', 47),\n",
+       " ('BCBP', 46),\n",
+       " ('HWL', 42),\n",
+       " ('MATH', 37),\n",
+       " ('NEJS', 37)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tup2 = dict()\n",
     "for c in courses:\n",
@@ -244,9 +372,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(('Leah', 'Berkenwald', 'leahb@brandeis.edu'), 926),\n",
+       " (('Kene Nathan', 'Piasta', 'kpiasta@brandeis.edu'), 583),\n",
+       " (('Stephanie', 'Murray', 'murray@brandeis.edu'), 515),\n",
+       " (('Milos', 'Dolnik', 'dolnik@brandeis.edu'), 489),\n",
+       " (('Maria', 'de Boef Miara', 'mmiara@brandeis.edu'), 450),\n",
+       " (('Bryan', 'Ingoglia', 'ingoglia@brandeis.edu'), 439),\n",
+       " (('Rachel V.E.', 'Woodruff', 'woodruff@brandeis.edu'), 422),\n",
+       " (('Timothy J', 'Hickey', 'tjhickey@brandeis.edu'), 411),\n",
+       " (('Daniel', 'Breen', 'dbreen91@brandeis.edu'), 375),\n",
+       " (('Melissa', 'Kosinski-Collins', 'kosinski@brandeis.edu'), 365)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "instructor = dict()\n",
     "for c in courses:\n",
@@ -266,9 +414,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(('HWL', '1'), 915), (('HWL', '1-PRE'), 784), (('BIOL', '14A'), 316), (('MATH', '10A'), 255), (('BIOL', '18B'), 251), (('BIOL', '18A'), 210), (('COSI', '10A'), 193), (('CHEM', '29A'), 193), (('COSI', '12B'), 182), (('BUS', '6A'), 178), (('CHEM', '29B'), 171), (('PSYC', '10A'), 166), (('BUS', '10A'), 163), (('MATH', '15A'), 161), (('EL', '35A'), 161), (('ECON', '80A'), 150), (('ECON', '10A'), 138), (('CHEM', '11B'), 137), (('CHEM', '18B'), 137), (('CHEM', '18A'), 137)]\n"
+     ]
+    }
+   ],
    "source": [
     "courses_students = dict()\n",
     "for c in courses:\n",
@@ -333,15 +489,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Biomedical Ethics',\n",
+       "  'Biostatistics',\n",
+       "  'Darwinian Dating: The Evolution of Human Attraction',\n",
+       "  'Human Anatomy',\n",
+       "  'Introduction to Cognitive Neuroscience',\n",
+       "  'Introduction to Probability and Statistics',\n",
+       "  'Money Management for Beginners',\n",
+       "  'Personal Safety/Self-Defense',\n",
+       "  'Yoga'}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[{c['name'] for c in courses if c['waiting'] >= 15}] "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
